--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <header>
   <a href = "">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+        <img src="" alt="images/UHS.jpg" alt="Photo of UHS building">
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "page_1.html">Page 1</a></li>
-                <li>Page 2</li>
-                <li>Page 3</li>
+                <li><a href = "Winter2025ImportantDates.html">Page 1</a></li>
+                <li><a href = "UMSICourseCatalog.html">Page 2</a></li>
+                <li><a href = "TutoringSite.html">Page 3</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
