--- a/index.html
+++ b/index.html
@@ -8,98 +8,51 @@
 <body>
 
     <header>
-  <a href = "">Skip to Main Content</a>
+        <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <img src="" alt="images/UHS.jpg" alt="Photo of UHS building">
+        <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad">
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "Winter2025ImportantDates.html">Page 1</a></li>
-                <li><a href = "UMSICourseCatalog.html">Page 2</a></li>
-                <li><a href = "TutoringSite.html">Page 3</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
+                <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
+                <li><a href="TutoringSite.html">Tutoring Resources</a></li>
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
-
     </header>
+
     <main>
         <section>
-            <h2>Welcome to the UM Grad Success Navigator</h2>
-            <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
-            <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
+            <h2>Welcome to the UMSI Success Portal</h2>
+            <p>Your guide to important resources for UMSI students. This portal will help you succeed academically, stay healthy, and navigate campus life. You’ll find links to key resources, including:</p>
             <ol>
-                <li>Academic Resources</li>
-                <li>Physical Health</li>
-                <li>Mental Health</li>
-                <li>Life Outside Classroom</li>
-                <li>Contact</li>
+                <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
+                <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
+                <li><a href="TutoringSite.html">Tutoring Resources for UMSI Students</a></li>
             </ol>
         </section>
+
         <section>
-            <h2>Physical Health</h2>
-            <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
-            <article>
-                <h3>University Health Service (UHS)</h3>
-                <figure>
-                    <img src="images/UHS.jpg" alt="University Health Services building">
-                    <figcaption>University Health Services Building</figcaption>
-                </figure>
-                <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
-            </article>
-            <article>
-                <h3>Recreational Sports</h3>
-                <figure>
-                    <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
-                    <figcaption>UMSI out in the fall!</figcaption>
-                </figure>
-                <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and healthy.</p>
-            </article>
+            <h2>Winter 2025 Important Dates</h2>
+            <p>Stay on top of your schedule by keeping track of important academic deadlines for Winter 2025. These dates include:</p>
+
         </section>
-        
+
         <section>
-            <h2>Mental Health</h2>
-            <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
-            <article>
-                <h3>Counseling and Psychological Services (CAPS):</h3>
-                <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
-            </article>
-            <article>
-                <h3>Wellness Coaching:</h3>
-
-                <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
-            </article>
-            <article>
-                <h3>Mindfulness Resources:</h3>
-
-                <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-            </article>
-            <article>
-                <h3>Support Groups:</h3>
-
-                <p> Join peer support groups for shared experiences and collective coping strategies.</p>
-            </article>
+            <h2>UMSI Course Catalog</h2>
+            <p>Explore the full list of courses offered by the School of Information (UMSI) for the upcoming term. This catalog helps you choose the right courses to fit your academic and career goals. Here’s what you can find:</p>
         </section>
 
-        
-        <section id="life-outside-classroom">
-            <h2>Life Outside the Classroom</h2>
-            <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
-            <article>
-
-            </article>
-            <ul>
-                <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
-                <li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
-                <li><strong>Career Services:</strong> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
-                <li><strong>Community Engagement:</strong> Get involved with local volunteering opportunities and community service projects to make a positive impact.</li>
-                <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining services to ensure a comfortable living experience.</li>
-            </ul>
+        <section>
+            <h2>Tutoring Resources for UMSI Students</h2>
+            <p>At UMSI, academic success is supported by a variety of tutoring services to help you with coursework and study challenges. Here’s how you can access tutoring resources:</p>
         </section>
-        <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
-        UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
+
     </main>
+
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising </a></p>
+    </footer>
 </body>
 </html>
