--- a/UMSICourseCatalog.html
+++ b/UMSICourseCatalog.html
@@ -9,7 +9,7 @@
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/MCOMMONS-WinterSemester2025-01.jpeg" alt="Photo of two girls talking.">
+        <img src="images/MCOMMONS-WinterSemester2025-01.png" alt="Photo of two girls talking.">
         <img src="images/UMSI_GeorgeLu_IndeedVisit_02.JPG" alt="Speaker talking to students.">
         <nav>
             <ul>
