--- a/UMSICourseCatalog.html
+++ b/UMSICourseCatalog.html
@@ -10,7 +10,7 @@
     <header>
         <a href="#main-content">Skip to Main Content</a>
         <img src="images/MCOMMONS-WinterSemester2025-01.png" alt="Photo of two girls talking.">
-        <img src="images/UMSI_GeorgeLu_IndeedVisit_02.JPG" alt="Speaker talking to students.">
+        <img src="images/UMSI_GeorgeLu_IndeedVisit_02.png" alt="Speaker talking to students.">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
