--- a/Winter2025ImportantDates.html
+++ b/Winter2025ImportantDates.html
@@ -9,8 +9,8 @@
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.JPG" alt="Photo of boy walking with UMSI backpack">
-        <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02 (2).png" alt="Photo of boy walking with UMSI backpack">
+        <img src="images/UMSI_NorthQuadFall_10252022_1.png" alt="Photo of North Quad.">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
