--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <a href="">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad">
+        <img src="images/UMSI_FacultyRetirementParty_08102021_001.png" alt="Photo of North Quad">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
