--- a/TutoringSite.html
+++ b/TutoringSite.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutoring Resources</title>
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.png" alt="Photo of students using sticky notes to learn.">
-        <img src="images/UMSI_MHIClassroom_02202023_11.png" alt="Photo of students in a classroom">
+        <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.JPG" alt="Photo of students using sticky notes to learn.">
+        <img src="images/UMSI_MHIClassroom_02202023_11.JPG" alt="Photo of students in a classroom">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
