--- a/UMSICourseCatalog.html
+++ b/UMSICourseCatalog.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMSI Course Catalog</title>
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/MCOMMONS-WinterSemester2025-01.png" alt="Photo of two girls talking.">
-        <img src="images/UMSI_GeorgeLu_IndeedVisit_02.png" alt="Speaker talking to students.">
+        <img src="images/MCOMMONS-WinterSemester2025-01.jpg" alt="Photo of two girls talking.">
+        <img src="images/UMSI_GeorgeLu_IndeedVisit_02.JPG" alt="Speaker talking to students.">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
