--- a/Winter2025ImportantDates.html
+++ b/Winter2025ImportantDates.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter 2025 Important Dates</title>
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02 (2).png" alt="Photo of boy walking with UMSI backpack">
-        <img src="images/UMSI_NorthQuadFall_10252022_1.png" alt="Photo of North Quad.">
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Photo of boy walking with UMSI backpack">
+        <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -40,7 +42,7 @@
                 <li><strong>End of Semester:</strong> April 25, 2025</li>
                 <li><strong>Grades Due:</strong> May 1, 2025</li>
             </ul>
-            <p>These dates are crucial for your academic planning, ensuring that you meet all registration and course deadlines. Make sure to mark these dates on your calendar and reach out to <a href="https://www.si.umich.edu/programs/bachelor-science-information/connect-us" UMSI Academic Advising</a> if you have any questions.</p>
+            <p>These dates are crucial for your academic planning, ensuring that you meet all registration and course deadlines. Make sure to mark these dates on your calendar and reach out to <a href="https://www.si.umich.edu/programs/bachelor-science-information/connect-us">UMSI Academic Advising</a> if you have any questions.</p>
         </div>
     </main>
 
