--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Success Portal</title>
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content" class="skip-link">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <img src="images/UMSI_FacultyRetirementParty_08102021_001.png" alt="Photo of North Quad">
+        <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
                 <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
                 <li><a href="TutoringSite.html">Tutoring Resources</a></li>
@@ -22,7 +24,7 @@
         <h1>Student Success Portal</h1>
     </header>
 
-    <main>
+    <main id="main-content">
         <section>
             <h2>Welcome to the UMSI Success Portal</h2>
             <p>Your guide to important resources for UMSI students. This portal will help you succeed academically, stay healthy, and navigate campus life. You’ll find links to key resources, including:</p>
@@ -36,7 +38,6 @@
         <section>
             <h2>Winter 2025 Important Dates</h2>
             <p>Stay on top of your schedule by keeping track of important academic deadlines for Winter 2025. These dates include:</p>
-
         </section>
 
         <section>
@@ -48,11 +49,11 @@
             <h2>Tutoring Resources for UMSI Students</h2>
             <p>At UMSI, academic success is supported by a variety of tutoring services to help you with coursework and study challenges. Here’s how you can access tutoring resources:</p>
         </section>
-
     </main>
 
-    <footer>
+    <footer class="container">
         <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising </a></p>
     </footer>
+
 </body>
 </html>
