--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <a href="#main-content" class="skip-link">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad">
+        <img src="images/UMSI_FacultyRetirementParty_08102021_001.jpg" alt="Photo of North Quad">
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
