--- a/Winter2025ImportantDates.html
+++ b/Winter2025ImportantDates.html
@@ -11,7 +11,7 @@
 
     <header>
         <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Photo of boy walking with UMSI backpack">
+        <img src="images/UMSI_CampusFall_UMSIBackpack_02.JPG" alt="Photo of boy walking with UMSI backpack">
         <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
         <nav>
             <ul>
