--- a/UMSICourseCatalog.html
+++ b/UMSICourseCatalog.html
@@ -10,18 +10,20 @@
 <body>
 
     <header>
-        <a href="#main-content">Skip to Main Content</a>
-        <img src="images/MCOMMONS-WinterSemester2025-01.jpg" alt="Photo of two girls talking.">
-        <img src="images/UMSI_GeorgeLu_IndeedVisit_02.JPG" alt="Speaker talking to students.">
+        <a href="#main-content" class="skip-link">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
-                <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
+                <li><a href="UMSICourseCatalog.html" class="active">UMSI Course Catalog</a></li>
                 <li><a href="TutoringSite.html">Tutoring Resources</a></li>
             </ul>
         </nav>
         <h1>UMSI Course Catalog</h1>
+        <div class="image-container">
+            <img src="images/MCOMMONS-WinterSemester2025-01.jpg" alt="Photo of two girls talking.">
+            <img src="images/UMSI_GeorgeLu_IndeedVisit_02.JPG" alt="Speaker talking to students.">
+        </div>
         <h2>Your Guide to Information Analysis and User Experience Courses</h2>
     </header>
 
