--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
     <header>
         <a href="#main-content" class="skip-link">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <img src="images/UMSI_FacultyRetirementParty_08102021_001.jpg" alt="Photo of North Quad">
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
@@ -22,6 +20,10 @@
             </ul>
         </nav>
         <h1>Student Success Portal</h1>
+        <div class="image-container">
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+            <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad" class="wrap-image">
+        </div>
     </header>
 
     <main id="main-content">
@@ -52,7 +54,7 @@
     </main>
 
     <footer class="container">
-        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising </a></p>
+        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising</a></p>
     </footer>
 
 </body>
