--- a/TutoringSite.html
+++ b/TutoringSite.html
@@ -10,18 +10,20 @@
 <body>
 
     <header>
-        <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.JPG" alt="Photo of students using sticky notes to learn.">
-        <img src="images/UMSI_MHIClassroom_02202023_11.JPG" alt="Photo of students in a classroom">
+        <a href="#main-content" class="skip-link">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Winter2025ImportantDates.html">Important Dates</a></li>
-                <li><a href="UMSICourseCatalog.html">Course Catalog</a></li>
-                <li><a href="TutoringSite.html">Tutoring Resources</a></li>
+                <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
+                <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
+                <li><a href="TutoringSite.html" class="active">Tutoring Resources</a></li>
             </ul>
         </nav>
         <h1>Tutoring Resources</h1>
+        <div class="image-container">
+            <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_05.JPG" alt="Photo of students using sticky notes to learn.">
+            <img src="images/UMSI_MHIClassroom_02202023_11.JPG" alt="Photo of students in a classroom">
+        </div>
         <h2>Supporting Your Academic Journey</h2>
     </header>
 
@@ -41,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 UMSI. Visit the <a href="https://www.si.umich.edu">official UMSI website</a> for more information and resources.</p>
+        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising</a></p>
     </footer>
     
 </body>
