--- a/Winter2025ImportantDates.html
+++ b/Winter2025ImportantDates.html
@@ -10,18 +10,20 @@
 <body>
 
     <header>
-        <a href="#main-content">Skip to Main Content</a>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.JPG" alt="Photo of boy walking with UMSI backpack">
-        <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
+        <a href="#main-content" class="skip-link">Skip to Main Content</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Winter2025ImportantDates.html">Winter 2025 Important Dates</a></li>
+                <li><a href="Winter2025ImportantDates.html" class="active">Winter 2025 Important Dates</a></li>
                 <li><a href="UMSICourseCatalog.html">UMSI Course Catalog</a></li>
                 <li><a href="TutoringSite.html">Tutoring Resources</a></li>
             </ul>
         </nav>
         <h1>Winter 2025 Important Dates</h1>
+        <div class="image-container">
+            <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Photo of boy walking with UMSI backpack">
+            <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
+        </div>
         <h2>Key Academic Deadlines and Events</h2>
     </header>
 
