--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Student Success Portal</h1>
         <div class="image-container">
             <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-            <img src="images/UMSI_FacultyRetirementParty_08102021_001.JPG" alt="Photo of North Quad" class="wrap-image">
+            <img src="images/UMSI_FacultyRetirementParty_08102021_001.jpg" alt="Photo of North Quad" class="wrap-image">
         </div>
     </header>
 
