--- a/Winter2025ImportantDates.html
+++ b/Winter2025ImportantDates.html
@@ -21,7 +21,7 @@
         </nav>
         <h1>Winter 2025 Important Dates</h1>
         <div class="image-container">
-            <img src="images/UMSI_CampusFall_UMSIBackpack_02.JPG" alt="Photo of boy walking with UMSI backpack">
+            <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="Photo of boy walking with UMSI backpack">
             <img src="images/UMSI_NorthQuadFall_10252022_1.jpg" alt="Photo of North Quad.">
         </div>
         <h2>Key Academic Deadlines and Events</h2>
@@ -49,8 +49,13 @@
     </main>
 
     <footer>
-        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising</a></p>
+        <p>UMSI Website | <a href="https://www.si.umich.edu">UMSI Academic Advising</a> | <span id="year"></span></p>
     </footer>
-    
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const yearElement = document.getElementById('year');
+            yearElement.textContent = new Date().getFullYear();
+        });
+    </script>
 </body>
 </html>
